--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "marcinrobak1008"
   ],
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/iam2611008/honeyco",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -15,6 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "components-font-awesome": "^4.6.3"
   }
 }
