--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "gulp": "^3.9.1",
-    "gulp-scss": "^1.4.0"
+    "gulp-scss": "^1.4.0",
+    "bower": "^1.7.9"
   },
   "devDependencies": {},
   "scripts": {
