--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,11 @@
   "main": "index.js",
   "authors": [
     "marcinrobak1008",
-    "zachmccormick"
+    "zachmccormick",
+    "MeganCFord"
   ],
   "license": "ISC",
-  "homepage": "https://github.com/iam2611008/honeyco",
+  "homepage": "https://github.com/HoneyCoHomes/Website",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -16,8 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "components-font-awesome": "^4.6.3",
-    "swipebox": "^1.4.4"
+    "bootstrap": "^4.0.0",
+    "components-font-awesome": "^4.6.3"
   }
 }
